compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__lists__equality.snap
---
source: compiler-core/src/fsharp/tests/lists.rs
expression: "\nfn go() {\n  [] == [1]\n  [] != [1]\n}\n"
---
module rec my.``mod``
let private go () = begin
    [] = [1L]
    [] <> [1L]
end
