compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__lists__list_constants.snap
---
source: compiler-core/src/fsharp/tests/lists.rs
expression: "\nconst a = []\nconst b = [1, 2, 3]\n"
---
module rec my.``mod``
let private a = []
let private b = [1L; 2L; 3L]
