compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__lists__long_list_literals.snap
---
source: compiler-core/src/fsharp/tests/lists.rs
expression: "\nfn go() {\n  [111111111111111111111111111111111111111111111111111111111111111111111111]\n  [11111111111111111111111111111111111111111111, 1111111111111111111111111111111111111111111]\n}\n"
---
module rec my.``mod``

let private go () = begin
    [111111111111111111111111111111111111111111111111111111111111111111111111L]
    [11111111111111111111111111111111111111111111L; 1111111111111111111111111111111111111111111L]
end
