compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__lists__multi_line_list_literals.snap
---
source: compiler-core/src/fsharp/tests/lists.rs
expression: "\nfn go(x) {\n    [{True 1}]\n}\n"
---
module rec my.``mod``

let private go<'a> (x: 'a) = begin
    [begin
        true
        1L
    end]
end
