compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__lists__tight_empty_list.snap
---
source: compiler-core/src/fsharp/tests/lists.rs
expression: "\nfn go(func) {\n  let huuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuge_variable = []\n}\n"
---
module rec my.``mod``

let private go<'a, 'b> (func: 'a) = begin
    let huuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuge_variable = []
    huuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuge_variable
end
